--- a/src/css/output.css
+++ b/src/css/output.css
@@ -654,6 +654,9 @@
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
+  .right-1 {
+    right: calc(var(--spacing) * 1);
+  }
   .right-1\/3 {
     right: calc(1/3 * 100%);
   }
@@ -698,6 +701,9 @@
   }
   .-left-3 {
     left: calc(var(--spacing) * -3);
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
   }
   .left-1 {
     left: calc(var(--spacing) * 1);
@@ -863,6 +869,9 @@
     @media (width >= 96rem) {
       max-width: 96rem !important;
     }
+  }
+  .mx-0 {
+    margin-inline: calc(var(--spacing) * 0);
   }
   .mx-24 {
     margin-inline: calc(var(--spacing) * 24);
@@ -1050,11 +1059,14 @@
   .h-\[12vh\] {
     height: 12vh;
   }
-  .h-\[30rem\] {
-    height: 30rem;
-  }
   .h-\[35rem\] {
     height: 35rem;
+  }
+  .h-\[90vh\] {
+    height: 90vh;
+  }
+  .h-\[99\%\] {
+    height: 99%;
   }
   .h-\[103vh\] {
     height: 103vh;
@@ -1065,17 +1077,20 @@
   .h-\[20rem\] {
     height: 20rem;
   }
+  .h-\[30rem\] {
+    height: 30rem;
+  }
   .h-\[34rem\] {
     height: 34rem;
   }
   .h-\[40rem\] {
     height: 40rem;
   }
-  .h-\[90vh\] {
-    height: 90vh;
+  .h-\[97vh\] {
+    height: 97vh;
   }
-  .h-\[99\%\] {
-    height: 99%;
+  .h-\[100vh\] {
+    height: 100vh;
   }
   .h-\[680px\] {
     height: 680px;
@@ -1101,8 +1116,17 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
+  }
+  .w-2 {
+    width: calc(var(--spacing) * 2);
+  }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
   }
   .w-3\/4 {
     width: calc(3/4 * 100%);
@@ -1121,6 +1145,9 @@
   }
   .w-10 {
     width: calc(var(--spacing) * 10);
+  }
+  .w-11 {
+    width: calc(var(--spacing) * 11);
   }
   .w-11\/12 {
     width: calc(11/12 * 100%);
@@ -1142,6 +1169,15 @@
   }
   .w-\[80vh\] {
     width: 80vh;
+  }
+  .w-\[97vh\] {
+    width: 97vh;
+  }
+  .w-\[100vh\] {
+    width: 100vh;
+  }
+  .w-\[200vh\] {
+    width: 200vh;
   }
   .w-auto {
     width: auto;
@@ -1247,6 +1283,10 @@
   .translate-full {
     --tw-translate-x: 100%;
     --tw-translate-y: 100%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
@@ -1908,6 +1948,9 @@
     --tw-border-style: solid;
     border-style: solid;
   }
+  .border-slate-300 {
+    border-color: var(--color-slate-300);
+  }
   .border-slate-300\/20 {
     border-color: color-mix(in oklab, var(--color-slate-300) 20%, transparent);
   }
@@ -2205,6 +2248,9 @@
   }
   .object-top {
     object-position: top;
+  }
+  .p-0 {
+    padding: calc(var(--spacing) * 0);
   }
   .p-1 {
     padding: calc(var(--spacing) * 1);
@@ -2538,11 +2584,17 @@
   .text-amber-300 {
     color: var(--color-amber-300);
   }
+  .text-blue-100 {
+    color: var(--color-blue-100);
+  }
   .text-blue-100\/70 {
     color: color-mix(in oklab, var(--color-blue-100) 70%, transparent);
   }
   .text-blue-100\/80 {
     color: color-mix(in oklab, var(--color-blue-100) 80%, transparent);
+  }
+  .text-cyan-50 {
+    color: var(--color-cyan-50);
   }
   .text-cyan-50\/70 {
     color: color-mix(in oklab, var(--color-cyan-50) 70%, transparent);
@@ -2574,6 +2626,9 @@
   .text-orange-100\/80 {
     color: color-mix(in oklab, var(--color-orange-100) 80%, transparent);
   }
+  .text-red-100 {
+    color: var(--color-red-100);
+  }
   .text-red-100\/90 {
     color: color-mix(in oklab, var(--color-red-100) 90%, transparent);
   }
@@ -2603,6 +2658,9 @@
   }
   .text-white {
     color: var(--color-white);
+  }
+  .text-yellow-900 {
+    color: var(--color-yellow-900);
   }
   .text-yellow-900\/80 {
     color: color-mix(in oklab, var(--color-yellow-900) 80%, transparent);
@@ -3906,6 +3964,11 @@
       margin-inline: calc(var(--spacing) * 32);
     }
   }
+  .xl\:h-\[5vh\] {
+    @media (width >= 80rem) {
+      height: 5vh;
+    }
+  }
   .xl\:h-\[6vh\] {
     @media (width >= 80rem) {
       height: 6vh;
@@ -3916,9 +3979,49 @@
       height: 80vh;
     }
   }
+  .xl\:h-\[90vh\] {
+    @media (width >= 80rem) {
+      height: 90vh;
+    }
+  }
+  .xl\:h-\[95vh\] {
+    @media (width >= 80rem) {
+      height: 95vh;
+    }
+  }
+  .xl\:h-\[97vh\] {
+    @media (width >= 80rem) {
+      height: 97vh;
+    }
+  }
+  .xl\:h-\[150vh\] {
+    @media (width >= 80rem) {
+      height: 150vh;
+    }
+  }
+  .xl\:h-\[200vh\] {
+    @media (width >= 80rem) {
+      height: 200vh;
+    }
+  }
+  .xl\:h-auto {
+    @media (width >= 80rem) {
+      height: auto;
+    }
+  }
   .xl\:min-h-\[88\%\] {
     @media (width >= 80rem) {
       min-height: 88%;
+    }
+  }
+  .xl\:w-full {
+    @media (width >= 80rem) {
+      width: 100%;
+    }
+  }
+  .xl\:w-screen {
+    @media (width >= 80rem) {
+      width: 100vw;
     }
   }
   .xl\:grid-cols-1 {
