--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1059,21 +1059,6 @@
   .h-\[12vh\] {
     height: 12vh;
   }
-  .h-\[35rem\] {
-    height: 35rem;
-  }
-  .h-\[90vh\] {
-    height: 90vh;
-  }
-  .h-\[99\%\] {
-    height: 99%;
-  }
-  .h-\[103vh\] {
-    height: 103vh;
-  }
-  .h-\[15rem\] {
-    height: 15rem;
-  }
   .h-\[20rem\] {
     height: 20rem;
   }
@@ -1086,8 +1071,23 @@
   .h-\[40rem\] {
     height: 40rem;
   }
+  .h-\[103vh\] {
+    height: 103vh;
+  }
+  .h-\[15rem\] {
+    height: 15rem;
+  }
+  .h-\[35rem\] {
+    height: 35rem;
+  }
+  .h-\[90vh\] {
+    height: 90vh;
+  }
   .h-\[97vh\] {
     height: 97vh;
+  }
+  .h-\[99\%\] {
+    height: 99%;
   }
   .h-\[100vh\] {
     height: 100vh;
@@ -1140,6 +1140,9 @@
   .w-7 {
     width: calc(var(--spacing) * 7);
   }
+  .w-8 {
+    width: calc(var(--spacing) * 8);
+  }
   .w-9 {
     width: calc(var(--spacing) * 9);
   }
@@ -1160,6 +1163,9 @@
   }
   .w-\[10px\] {
     width: 10px;
+  }
+  .w-\[30px\] {
+    width: 30px;
   }
   .w-\[64rem\] {
     width: 64rem;
@@ -1349,6 +1355,9 @@
   }
   .transform-none {
     transform: none;
+  }
+  .animate-bounce {
+    animation: var(--animate-bounce);
   }
   .animate-card-skill-in {
     animation: var(--animate-card-skill-in);
@@ -1796,6 +1805,9 @@
   .rounded {
     border-radius: 0.25rem;
   }
+  .rounded-\[1px\] {
+    border-radius: 1px;
+  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
@@ -1807,6 +1819,9 @@
   }
   .rounded-sm {
     border-radius: var(--radius-sm);
+  }
+  .rounded-xs {
+    border-radius: var(--radius-xs);
   }
   .rounded-s {
     border-start-start-radius: 0.25rem;
@@ -2353,6 +2368,9 @@
   }
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
+  }
+  .pl-4 {
+    padding-left: calc(var(--spacing) * 4);
   }
   .pl-6 {
     padding-left: calc(var(--spacing) * 6);
@@ -3233,6 +3251,26 @@
       }
     }
   }
+  .hover\:scale-125 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 125%;
+        --tw-scale-y: 125%;
+        --tw-scale-z: 125%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:scale-150 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 150%;
+        --tw-scale-y: 150%;
+        --tw-scale-z: 150%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
   .hover\:scale-\[101\%\] {
     &:hover {
       @media (hover: hover) {
@@ -3240,10 +3278,24 @@
       }
     }
   }
+  .hover\:scale-\[102\%\] {
+    &:hover {
+      @media (hover: hover) {
+        scale: 102%;
+      }
+    }
+  }
   .hover\:scale-\[103\%\] {
     &:hover {
       @media (hover: hover) {
         scale: 103%;
+      }
+    }
+  }
+  .hover\:scale-\[110\%\] {
+    &:hover {
+      @media (hover: hover) {
+        scale: 110%;
       }
     }
   }
